--- a/init.chacha.rc
+++ b/init.chacha.rc
@@ -72,11 +72,11 @@ on boot
 
 
 on init
-    mount rootfs rootfs / remount
+    mount rootfs rootfs / rw remount
     mkdir /app-cache 01777 system system
     mount tmpfs tmpfs /app-cache size=8m
     mkdir /data/app-cache 0771 system system
-    mount rootfs rootfs / ro remount
+    mount rootfs rootfs / rw remount
 
     # Define the memory thresholds at which the above process classes will
     # be killed.  These numbers are in pages (4k).
@@ -103,9 +103,9 @@ on init
     write /sys/module/lowmemorykiller/parameters/check_filepages 1
 
     # performance tweaks for flash
-    write /sys/block/mtdblock3/bdi/read_ahead_kb 4
-    write /sys/block/mtdblock4/bdi/read_ahead_kb 4
-    write /sys/block/mtdblock5/bdi/read_ahead_kb 4
+    write /sys/block/mtdblock3/bdi/read_ahead_kb 512
+    write /sys/block/mtdblock4/bdi/read_ahead_kb 512
+    write /sys/block/mtdblock5/bdi/read_ahead_kb 512
 
 #on fs
 
@@ -129,29 +129,25 @@ service wpa_supplicant /system/bin/logwrapper /system/bin/wpa_supplicant \
     -Dwext -iwlan0 -c/data/misc/wifi/wpa_supplicant.conf
 #   we will start as root and wpa_supplicant will switch to user wifi
 #   after setting up the capabilities required for WEXT
-#   user wifi
-#   group wifi inet keystore
+    user wifi
+    group wifi inet keystore
     class main
     socket wpa_wlan0 dgram 660 wifi wifi
-    disabled
     oneshot
 
 
 service dhcpcd_wlan0 /system/bin/dhcpcd -ABKL
     class main
-    disabled
     oneshot
 
 service iprenew_wlan0 /system/bin/dhcpcd -n
     class main
-    disabled
     oneshot
 
 
 service modem /system/xbin/wireless_modem
     user system
     group system radio
-    disabled
 
 on property:service.modem.enable=1
     start modem
@@ -176,7 +172,6 @@ service compcache /system/bin/handle_compcache
     class main
     user root
     group root
-    disabled
 
 on property:persist.service.zram=10
     start compcache
@@ -189,7 +184,6 @@ on property:persist.service.zram=26
 
 
 service srv_ser2net /system/bin/ser2net -n
-    disabled
 
 
 on property:service.ser2net.enable=1
@@ -203,7 +197,6 @@ service hciattach /system/bin/brcm_patchram_plus --enable_hci --enable_lpm \
     --baudrate 3000000 --patchram /etc/firmware/bcm4329.hcd /dev/ttyHS0
     user bluetooth
     group bluetooth net_bt_admin
-    disabled
 
 
 service ril-daemon /system/bin/rild
